--- a/index_2.html
+++ b/index_2.html
@@ -37,8 +37,27 @@
   <button class="gif" data-team="Utah Jazz">Utah Jazz</button>
   <!-- <button data-team="Washington Wizards">Washington Wizards</button> -->
 
+
   <div id="gifsDiv">
   </div>
+
+  <!-- Teams will Get Dumped Here -->
+  <div id="movies-view"></div>
+
+  <!-- Rendered Buttons will get Dumped Here  -->
+  <div id="buttons-view"></div>
+
+  <form id="team-form">
+    <label for="team-input">Add a Team</label>
+    <input type="text" id="team-input">
+    <br>
+
+    <!-- Button triggers new movie to be added -->
+    <input id="add-team" type="submit" value="Add a Team">
+  </form>
+
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="assets/javascript/script.js"></script>
 </body>
